<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Explore">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exploreMemes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav"/>

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/ic_baseline_home_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/explore"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/explore"
            app:srcCompat="@drawable/ic_baseline_explore_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/reels"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/reels"
            app:srcCompat="@drawable/ic_baseline_ondemand_video_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/saved"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/saved"
            app:srcCompat="@drawable/ic_baseline_bookmark_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            app:srcCompat="@drawable/ic_baseline_settings_24"
            app:tint="#0FEBBE" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>