<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ExploreRecycler">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ExploreRecycler">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exploreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/explorerHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/explorerecyclerhome"
            app:srcCompat="@drawable/ic_baseline_home_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/explorerExplore"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/explorerecyclerexplore"
            app:srcCompat="@drawable/ic_baseline_explore_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/explorerSaved"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/explorerecyclersaved"
            app:srcCompat="@drawable/ic_baseline_bookmark_24"
            app:tint="#0FEBBE" />

        <ImageView
            android:id="@+id/explorerSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            app:srcCompat="@drawable/ic_baseline_settings_24"
            app:tint="#0FEBBE" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>