<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SingleMeme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/memeImg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/memeImg"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meme_description"
        app:srcCompat="@drawable/ic_baseline_share_24"
        app:tint="#0FEBBE"
        android:contentDescription="@string/share" />

    <TextView
        android:id="@+id/meme_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeImg"
        app:layout_constraintVertical_bias="0.487" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/memeImg"
        app:layout_constraintBottom_toBottomOf="@id/memeImg"
        app:layout_constraintLeft_toLeftOf="@id/memeImg"
        app:layout_constraintRight_toRightOf="@id/memeImg"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="96dp" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="320dp"
        app:tint="#0FEBBE"
        app:layout_constraintTop_toBottomOf="@id/meme_description"
        app:layout_constraintRight_toLeftOf="@id/share"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/savedimage" />
</androidx.constraintlayout.widget.ConstraintLayout>